# fizzy-forum-archive

./: .gitignore  Cargo.toml  LICENSE  README.md
crawler/: Cargo.toml
crawler/src/: main.rs  types.rs
src/: main.rs  requests.rs  types.rs
structure/: Cargo.toml
structure/src/: lib.rs
viewer/: Cargo.toml  fastly.toml
viewer/src/: main.rs
viewer/src/templates/: error.html  index.html  mod.rs  style.css  thread.html  topics.html
