[package]
name = "fizzy-forum-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.8", features = ["json"] }
anyhow = "1.0.51"
tokio = { version = "1.15.0", features = ["rt", "macros", "rt-multi-thread"] }
