[package]
name = "viewer"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[dependencies]
structure = { path = "../structure" }
fastly = "^0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tinytemplate = "1.2.1"
include_dir = { version = "0.7.2", features = ["glob"] }
chrono = "0.4.19"
